# projeto-pratico

./: clientes.csv  contatos.html  projetos.html  pyproject.toml
