[project]
name = "projeto-pratico"
version = "0.1.0"
description = ""
authors = [
    {name = "Tiago Cavalca",email = "T.cavalca47@gmail.com"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.42.2,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"